--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.10.3",
+    "@nuxt/image": "^1.9.0",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/i18n": "^9.1.3",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@pinia/nuxt": "^0.9.0",
+    "@vueuse/nuxt": "^12.5.0",
     "nuxt": "^3.15.3",
+    "pinia": "^2.3.1",
     "vue": "latest",
     "vue-router": "latest"
   }
