--- a/package.json
+++ b/package.json
@@ -17,10 +17,19 @@
     "@nuxtjs/i18n": "^9.1.3",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@pinia/nuxt": "^0.9.0",
+    "@shuriken-ui/nuxt": "^3.6.1",
+    "@shuriken-ui/tailwind": "^3.1.3",
     "@vueuse/nuxt": "^12.5.0",
     "nuxt": "^3.15.3",
+    "nuxt-typed-router": "^3.7.3",
     "pinia": "^2.3.1",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.4",
+    "prettier": "3.5.3",
+    "typescript": "^5.7.3",
+    "vue-tsc": "^2.2.0"
   }
 }
