--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,13 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  //"compilerOptions": {
+    // ... other options
+    //"types": ["@nuxt/types", "@nuxt/vue-app", "@types/node"]
+  //},
+  //"include": [
+  //  "./types/**/*.ts",
+  //  "./types/**/*.d.ts",
+  //  "./types/*.ts"
+  //]
 }
